--- a/facedetect.html
+++ b/facedetect.html
@@ -4,10 +4,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>face-api</title>
+  <title>FOMO</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/ml5js/Intro-ML-Arts-IMA@ml5-build-10-7-19/ml5_build/ml5.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style1.css">
   <meta charset="utf-8" />
 </head>
